--- a/NewWordsDictionary/Base.lproj/Main.storyboard
+++ b/NewWordsDictionary/Base.lproj/Main.storyboard
@@ -57,32 +57,103 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="sJT-CM-fRf">
+                                <rect key="frame" x="20" y="131" width="374" height="28.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jjR-6j-nG8">
+                                        <rect key="frame" x="0.0" y="0.0" width="87" height="28.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="만반잘부">
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="12"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="btn_firstHashTagClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sys-kB-BTl"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X5i-us-wkh">
+                                        <rect key="frame" x="96" y="0.0" width="86.5" height="28.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="꾸안꾸">
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="12"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="btn_secondHashTagClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WMF-n7-onK"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="CTw-mR-IAV">
+                                        <rect key="frame" x="191.5" y="0.0" width="87" height="28.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="오운완" titleAlignment="center">
+                                            <backgroundConfiguration key="background" cornerRadius="5"/>
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="12"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="btn_thirdHashTagClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="so8-5p-wfT"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="8X1-eI-Ia9">
+                                        <rect key="frame" x="287.5" y="0.0" width="86.5" height="28.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="킹받네" titleAlignment="center">
+                                            <backgroundConfiguration key="background" cornerRadius="5"/>
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="12"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="btn_fourthHashTagClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h3P-kZ-mVD"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="vFE-1T-4dE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8yr-L7-Zs5"/>
                             <constraint firstItem="rYf-dL-yid" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="Aae-Rq-Q1q"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HwU-2I-mLW" secondAttribute="trailing" constant="20" id="BaF-Pk-6WK"/>
                             <constraint firstItem="P0C-pO-dhk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E4o-4Y-G8F"/>
+                            <constraint firstItem="sJT-CM-fRf" firstAttribute="top" secondItem="HwU-2I-mLW" secondAttribute="bottom" constant="8" symbolic="YES" id="HDU-cf-o1B"/>
                             <constraint firstItem="P0C-pO-dhk" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Q7I-gS-lKZ"/>
+                            <constraint firstItem="sJT-CM-fRf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="WAL-Ep-8zM"/>
                             <constraint firstItem="rYf-dL-yid" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Z37-3C-LzX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vFE-1T-4dE" secondAttribute="trailing" constant="20" id="ccc-WU-dFC"/>
                             <constraint firstItem="HwU-2I-mLW" firstAttribute="top" secondItem="rYf-dL-yid" secondAttribute="bottom" constant="1" id="era-9s-a3d"/>
                             <constraint firstItem="vFE-1T-4dE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="joQ-dL-weR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sJT-CM-fRf" secondAttribute="trailing" constant="20" id="juE-wS-qGV"/>
                             <constraint firstItem="HwU-2I-mLW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="q77-xm-AMg"/>
                             <constraint firstItem="vFE-1T-4dE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rCP-TQ-qp7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rYf-dL-yid" secondAttribute="trailing" constant="20" id="tdN-66-H2w"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="dhK-R2-vIC" appends="YES" id="Q4d-i3-XwQ"/>
+                        </connections>
                     </view>
                     <connections>
+                        <outlet property="btn_firstHashTag" destination="jjR-6j-nG8" id="RHb-ks-pqV"/>
+                        <outlet property="btn_fourthHashTag" destination="8X1-eI-Ia9" id="J0y-aC-eXa"/>
                         <outlet property="btn_search" destination="Ssw-Rb-jJS" id="u2R-i6-aGV"/>
+                        <outlet property="btn_secondHashTag" destination="X5i-us-wkh" id="Pay-Y7-eCh"/>
+                        <outlet property="btn_thirdHashTag" destination="CTw-mR-IAV" id="Hwz-nd-pEX"/>
                         <outlet property="lb_results" destination="P0C-pO-dhk" id="ILP-Z4-jQu"/>
                         <outlet property="lb_warning" destination="HwU-2I-mLW" id="420-zg-zxD"/>
                         <outlet property="tf_search" destination="XzF-Eh-h5f" id="reh-fN-BXN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="dhK-R2-vIC">
+                    <connections>
+                        <action selector="tapGesture:" destination="BYZ-38-t0r" id="1pk-hA-OnU"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="28.985507246376812" y="83.705357142857139"/>
         </scene>
